--- a/style.css
+++ b/style.css
@@ -156,7 +156,8 @@ body {
 }
 
 img {
-    width: 100%;
+    width: 100vw;
+    height: 100vh;
 }
 
 #tekst-balk {
@@ -182,9 +183,11 @@ main {
     margin: 0 auto;
 }
 
-p #light {
+#light {
     text-align: center;
     margin-top: 30px;
+    width: 50%;
+    margin: 0 auto;
 }
 
 h1 {
@@ -196,7 +199,12 @@ p {
     margin-top: 3px;
 }
 
+audio {
+    margin-top: 30px;
+}
+
 footer {
+    margin-top: 30px;
     height: 300px;
     background-color: #322248;
 }
