--- a/css/style.css
+++ b/css/style.css
@@ -146,30 +146,58 @@ table {
 }
 
 body {
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
+    font-family: Skia;
+    overflow-x: hidden;
 }
 
 .header-balk {
-    height: 100px;
+    position: fixed;
+    top: 0px;
+    height: 120px;
     width: 100%;
     background-color: #322248;
+    z-index: 999;
+}
+
+.header-balk p {
+    color: white;
+    text-align: center;
+    width: 900px;
+    margin-left: 50%;
+    margin-top: 10px;
+    transform: translate(-50%, 0);
 }
 
 img {
-    width: 100vw;
-    height: 100vh;
+    display: block;
+    width: 100%;
+    max-height: 100vh;
+}
+
+img.svg {
+    position: absolute;
+    right: -200px;
+    bottom: 900px;
+    max-width: 1200px;
+}
+
+img.logo {
+    float: left;
+    margin: 22px;
+    width: 300px;
 }
 
 #tekst-balk {
-    position: absolute;
+    position: relative;
+    top: 50%;
     height: 100px;
     width: 40%;
     background-color: #322248;
-    margin-top: 50px;
 }
 
 button {
     float: right;
+    margin: 23px;
     height: 45px;
     width: 150px;
     border-radius: 23px;
@@ -178,25 +206,47 @@ button {
     font-size: 20px;
 }
 
+a {
+    color: black;
+    text-decoration: none;
+}
+
 main {
     width: 50%;
     margin: 0 auto;
+    z-index: 10;
 }
 
-#light {
+p.light {
     text-align: center;
-    margin-top: 30px;
-    width: 50%;
-    margin: 0 auto;
+    margin-top: 50px;
+    width: 75%;
+    margin-left: 50%;
+    transform: translate(-50%, 0);
+    font-weight: lighter;
+    text-align: center;
+}
+
+p.einde {
+    margin-top: 50px;
 }
 
 h1 {
+    font-weight: bolder;
+    margin-top: 50px;
+}
+
+h1.h1-faq {
+    margin-top: 170px;
+}
+
+h2 {
     font-weight: 700;
     margin-top: 30px;
 }
 
 p {
-    margin-top: 3px;
+    margin-top: 5px;
 }
 
 audio {
@@ -204,21 +254,84 @@ audio {
 }
 
 footer {
-    margin-top: 30px;
+    margin-top: 50px;
+    margin-bottom: 0px;
     height: 300px;
     background-color: #322248;
 }
 
-@media screen and (max-width: 600px) {
-    body {
-        background-color: lightblue;
-    }
+@media only screen and (max-width: 600px) {
     button {
         height: 35px;
-        width: 100px;
-        font-size: 15px;
+        width: 50px;
+        margin: 30px;
     }
     main {
         width: 70%;
+    }
+    .svg {
+        right: -10px;
+    }
+    button {
+        height: 40px;
+        width: 150px;
+    }
+    img.logo {
+        width: 225px;
+        margin: 30px;
+    }
+    .background-foto {
+        height: 400px;
+    }
+}
+
+@media only screen and (max-width: 500px) {
+    img.logo {
+        width: 200px;
+        margin: 25px;
+    }
+    button {
+        height: 35px;
+        width: 90px;
+        margin: 25px;
+    }
+    .header-balk {
+        height: 100px;
+    }
+    .begin {
+        font-size: 13px;
+    }
+}
+
+@media only screen and (max-width: 400px) {
+    img.logo {
+        width: 175px;
+        margin: 24px;
+    }
+    button {
+        height: 35px;
+        width: 90px;
+        margin: 20px;
+    }
+    .header-balk {
+        height: 100px;
+    }
+    .begin {
+        font-size: 10px;
+    }
+}
+
+@media only screen and (max-width: 350px) {
+    img.logo {
+        width: 150px;
+        margin: 24px;
+    }
+    button {
+        height: 35px;
+        width: 90px;
+        margin: 20px;
+    }
+    .header-balk {
+        height: 100px;
     }
 }
