--- a/css/style.css
+++ b/css/style.css
@@ -142,7 +142,7 @@ table {
 
 @font-face {
     font-family: Skia;
-    src: url(/fonts/Skia\ Regular.ttf);
+    src: url(../fonts/Skia\ Regular.ttf);
 }
 
 body {
@@ -164,7 +164,7 @@ body {
     text-align: center;
     width: 900px;
     margin-left: 50%;
-    margin-top: 10px;
+    margin-top: 15px;
     transform: translate(-50%, 0);
 }
 
@@ -172,6 +172,7 @@ img {
     display: block;
     width: 100%;
     max-height: 100vh;
+    margin-top: 20px;
 }
 
 img.svg {
@@ -214,7 +215,6 @@ a {
 main {
     width: 50%;
     margin: 0 auto;
-    z-index: 10;
 }
 
 p.light {
@@ -229,6 +229,11 @@ p.light {
 
 p.einde {
     margin-top: 50px;
+}
+
+footer p {
+    color: white;
+    margin-top: 30px;
 }
 
 h1 {
@@ -258,6 +263,7 @@ footer {
     margin-bottom: 0px;
     height: 300px;
     background-color: #322248;
+    padding-top: 20px;
 }
 
 @media only screen and (max-width: 600px) {
@@ -298,8 +304,8 @@ footer {
     .header-balk {
         height: 100px;
     }
-    .begin {
-        font-size: 13px;
+    .header-balk p {
+        font-size: 14px;
     }
 }
 
@@ -316,8 +322,8 @@ footer {
     .header-balk {
         height: 100px;
     }
-    .begin {
-        font-size: 10px;
+    .header-balk p {
+        font-size: 11px;
     }
 }
 
