--- a/css/style.css
+++ b/css/style.css
@@ -150,10 +150,20 @@ body {
     overflow-x: hidden;
 }
 
+.container_row {
+    display: grid;
+}
+
+.layer1,
+.layer2 {
+    grid-column: 1;
+    grid-row: 1;
+}
+
 .header-balk {
     position: fixed;
     top: 0px;
-    height: 120px;
+    height: 130px;
     width: 100%;
     background-color: #322248;
     z-index: 999;
@@ -173,13 +183,13 @@ img {
     width: 100%;
     max-height: 100vh;
     margin-top: 20px;
+    z-index: 50;
 }
 
 img.svg {
-    position: absolute;
-    right: -200px;
-    bottom: 900px;
-    max-width: 1200px;
+    float: right;
+    margin-top: 1000px;
+    width: 1000px;
 }
 
 img.logo {
@@ -207,9 +217,20 @@ button {
     font-size: 20px;
 }
 
+.streep {
+    float: right;
+    margin-right: 50px;
+    width: 5px;
+    height: 50px;
+    background-color: white;
+}
+
 a {
     color: black;
     text-decoration: none;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-size: 18px;
+    font-weight: bold;
 }
 
 main {
@@ -225,6 +246,7 @@ p.light {
     transform: translate(-50%, 0);
     font-weight: lighter;
     text-align: center;
+    opacity: 0.6;
 }
 
 p.einde {
@@ -237,12 +259,13 @@ footer p {
 }
 
 h1 {
-    font-weight: bolder;
+    font-weight: 900;
     margin-top: 50px;
+    font-size: 20px;
 }
 
 h1.h1-faq {
-    margin-top: 170px;
+    margin-top: 180px;
 }
 
 h2 {
@@ -251,7 +274,7 @@ h2 {
 }
 
 p {
-    margin-top: 5px;
+    margin-top: 10px;
 }
 
 audio {
@@ -261,9 +284,18 @@ audio {
 footer {
     margin-top: 50px;
     margin-bottom: 0px;
-    height: 300px;
+    height: 400px;
     background-color: #322248;
     padding-top: 20px;
+}
+
+footer p {
+    margin-bottom: 10px;
+}
+
+footer a {
+    color: white;
+    font-size: 16px;
 }
 
 @media only screen and (max-width: 600px) {
